--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body{
 }
 button{
     border: none;
+    cursor: pointer;
 }
 h1{
     display: flex;
@@ -38,7 +39,7 @@ h1{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 30px;
+    gap:150px;
 }
 .randomArt{
     display: flex;
@@ -54,21 +55,28 @@ h1{
 }
 .randomArt img{
     border-radius: inherit;
-    max-width: 300px;
-    max-height: 300px;
+    max-width: 350px;
+    max-height: 350px;
     object-fit:cover
 }
 
 
 button img{
-    height: 32px;
+    height: 42px;
     margin-top: 0px;
     margin-bottom: 0px;
+}
+button:active {
+    background-color: #b30062;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    transform: translateY(2px);
 }
 .mainReloadBtn{
     margin-top: 25px;
     border-radius: 30px;
-    width: 90px;
+    width:120px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     
 }
 
@@ -96,6 +104,7 @@ button img{
 display: flex;
 flex-direction: column;
 align-items: center;
+cursor: pointer;
 }
 #uploadPreview{
     margin-top: 15px;
@@ -111,11 +120,13 @@ align-items: center;
     flex-direction: column;
     align-items: center;
     margin-top: 30px;
+    margin-bottom: 80px;
 }
 #favoriteMichis{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 100px;  
+    column-gap: 100px;  
+    row-gap: 50px;
     margin-top: 30px;
     
     
